--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
     <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="text-align: center"> Our findings </h2>
+    <h2 style="text-align: center"> Causes of capacity degradation </h2>
     <div class="gap-10"></div>
 
     <center><p style="width:90%; text-align: justify; white-space: normal;">
@@ -575,6 +575,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
